fix columns on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -254,6 +254,7 @@
         padding-top: 1rem;
         padding-bottom: 2rem;
         margin: 0.25rem;
+        min-width: 15rem;
 
 
         &.is-blue{
